@@ -1,6 +1,7 @@
 hy (0.11.0-4) UNRELEASED; urgency=medium
 
   * Fix FTBFS due to rply trying to write to HOME during sphinx-build.
+  * Fix build repeatability with proper override_dh_auto_clean.
 
  -- Tianon Gravi <tianon@debian.org>  Mon, 16 Nov 2015 09:30:10 -0800
 
